# operating_system

./: .gitignore  LICENSE  run.sh  serial.py
boot_loader/: .gitignore  README.md  boot.asm
kernel_cpp/: CMakeLists.txt  linker_cpp.ld  main.cpp  run.sh  start.s
project/: CMakeLists.txt  doxygen.cfg  kernel.c  linker.ld  module.c  module.h  run.sh
project/src/: .module_description_table.c.swp  asm_start.s  dependencies.graphviz  generate_dependencies_graph.sh  kernel.c  module__driver__rtl8139.c  module__driver__rtl8139.h  module__network.c  module__network.h  module__network__data.c  module__network__data.h  module__network__ethernet_interface.c  module__network__ethernet_interface.h  module__network__ip__tcp.c  module__network__ip__tcp.h  module__network__service__dhcp__client.c  module__network__service__dhcp__client.h  module__network__service__http__client.c  module__network__service__http__client.h  module__pci.c  module__pci.h  module_base.c  module_base.h  module_description_table.c  module_description_table.h  module_description_table_asm.s  module_heap.c  module_heap.h  module_interrupt.c  module_interrupt.h  module_interrupt_asm.s  module_kernel.c  module_kernel.h  module_keyboard.c  module_keyboard.h  module_network.c  module_network.h  module_pci.c  module_pci.h  module_serial.c  (+12 more)
