project(operating_system_c)
add_executable(unit_tests
  src/kernel.c
  src/module_base.c
  src/module__driver__rtl8139.c
  src/module_heap.c
  src/module_interrupt.c
  src/module_kernel.c
  src/module_keyboard.c
  src/module__network.c
  src/module__network__ethernet_interface.c
  src/module__network__data.c
  src/module__network__ip__tcp.c
  src/module__network__service__dhcp__client.c
  src/module__network__service__http__client.c
  src/module__pci.c
  src/module_serial.c
  src/module_terminal.c
  src/module_video.c
  src/module_video_font.c
  src/module_video_mode.c
)
